--- a/kubejs/game_settings/config.json
+++ b/kubejs/game_settings/config.json
@@ -2,5 +2,7 @@
 	"StartingItems": true,
 	"CreativeCrafting": false,
 	"CustomCapes": true,
-	"CannonHandShot": true
+	"CannonHandShot": true,
+	"RememberMe": true,
+	"HardMobs": true
 }
