--- a/config/squatgrow-common.yaml
+++ b/config/squatgrow-common.yaml
@@ -49,7 +49,6 @@ ignoreList: [
   "minecraft:mangrove_propagule",
   "minecraft:dark_oak_sapling",
   "biomesoplenty:umbran_sapling",
-  "biomesoplenty:yellow_autumn_sapling",
   "biomesoplenty:flowering_oak_sapling",
   "thermal:rubberwood_sapling",
   "aether:skyroot_sapling",
@@ -69,12 +68,16 @@ ignoreList: [
   "biomesoplenty:jacaranda_sapling",
   "biomesoplenty:willow_sapling",
   "biomesoplenty:redwood_sapling",
-  "biomesoplenty:orange_autumn_sapling",
   "biomesoplenty:rainbow_birch_sapling",
   "biomesoplenty:hellbark_sapling",
   "biomesoplenty:palm_sapling",
   "biomesoplenty:dead_sapling",
-  "biomesoplenty:maple_sapling"
+  'biomesoplenty:red_maple_sapling',
+  'biomesoplenty:orange_maple_sapling', 
+  'biomesoplenty:yellow_maple_sapling',
+  'biomesoplenty:cypress_sapling',
+  'biomesoplenty:pine_sapling',
+  'biomesoplenty:empyreal_sapling'
   ]
 randomTickMultiplier: 1
 range: 5
