--- a/config/squatgrow-common.yaml
+++ b/config/squatgrow-common.yaml
@@ -7,78 +7,27 @@ enableAE2Accelerator: true
 enableDirtToGrass: false
 enableMysticalCrops: true
 hoeTakesDamage: false
-ignoreList: [
-  "minecraft:cave_vine",
-  "minecraft:cave_vine_plant",
-  "endercrop:ender_crop",
-  "minecraft:wheat",
-  "minecraft:sweet_berry_bush",
-  "minecraft:pumpkin_stem",
-  "minecraft:melon_stem",
-  "minecraft:beetroots",
-  "minecraft:red_mushroom",
-  "minecraft:brown_mushroom",
-  "minecraft:potatoes",
-  "minecraft:carrots",
-  "minecraft:warped_fungus",
-  "minecraft:crimson_fungus",
-  "farmersdelight:cabbages",
-  "farmersdelight:budding_tomatoes",
-  "farmersdelight:tomatoes",
-  "farmersdelight:rice",
-  "farmersdelight:rice_panicles",
-  "minecraft:sugar_cane",
-  "farmersdelight:onions",
-  "thermal:amaranth",
-  "thermal:barley",
-  "thermal:corn",
-  "thermal:flax",
-  "thermal:radish",
-  "thermal:sadiroot",
-  "thermal:spinach",
-  "thermal:bell_pepper",
-  "thermal:eggplant",
-  "thermal:green_bean",
-  "thermal:peanut",
-  "thermal:strawberry",
-  "thermal:tea",
-  "thermal:frost_melon_stem",
-  "aether:berry_bush_stem",
-  "minecraft:azalea",
-  "minecraft:cherry_sapling",
-  "minecraft:mangrove_propagule",
-  "minecraft:dark_oak_sapling",
-  "biomesoplenty:umbran_sapling",
-  "biomesoplenty:flowering_oak_sapling",
-  "thermal:rubberwood_sapling",
-  "aether:skyroot_sapling",
-  "biomesoplenty:magic_sapling",
-  "minecraft:birch_sapling",
-  "minecraft:spruce_sapling",
-  "minecraft:oak_sapling",
-  "minecraft:flowering_azalea",
-  "minecraft:jungle_sapling",
-  "minecraft:acacia_sapling",
-  "architects_palette:twisted_sapling",
-  "biomesoplenty:origin_sapling",
-  "aether:golden_oak_sapling",
-  "biomesoplenty:mahogany_sapling",
-  "biomesoplenty:fir_sapling",
-  "biomesoplenty:snowblossom_sapling",
-  "biomesoplenty:jacaranda_sapling",
-  "biomesoplenty:willow_sapling",
-  "biomesoplenty:redwood_sapling",
-  "biomesoplenty:rainbow_birch_sapling",
-  "biomesoplenty:hellbark_sapling",
-  "biomesoplenty:palm_sapling",
-  "biomesoplenty:dead_sapling",
-  'biomesoplenty:red_maple_sapling',
-  'biomesoplenty:orange_maple_sapling', 
-  'biomesoplenty:yellow_maple_sapling',
-  'biomesoplenty:cypress_sapling',
-  'biomesoplenty:pine_sapling',
-  'biomesoplenty:empyreal_sapling'
-  ]
+ignoreList: ['minecraft:cave_vine', 'minecraft:cave_vine_plant', 'endercrop:ender_crop',
+  'minecraft:wheat', 'minecraft:sweet_berry_bush', 'minecraft:pumpkin_stem', 'minecraft:melon_stem',
+  'minecraft:beetroots', 'minecraft:red_mushroom', 'minecraft:brown_mushroom', 'minecraft:potatoes',
+  'minecraft:carrots', 'minecraft:warped_fungus', 'minecraft:crimson_fungus', 'farmersdelight:cabbages',
+  'farmersdelight:budding_tomatoes', 'farmersdelight:tomatoes', 'farmersdelight:rice',
+  'farmersdelight:rice_panicles', 'minecraft:sugar_cane', 'farmersdelight:onions',
+  'thermal:amaranth', 'thermal:barley', 'thermal:corn', 'thermal:flax', 'thermal:radish',
+  'thermal:sadiroot', 'thermal:spinach', 'thermal:bell_pepper', 'thermal:eggplant',
+  'thermal:green_bean', 'thermal:peanut', 'thermal:strawberry', 'thermal:tea', 'thermal:frost_melon_stem',
+  'aether:berry_bush_stem', 'minecraft:azalea', 'minecraft:cherry_sapling', 'minecraft:mangrove_propagule',
+  'minecraft:dark_oak_sapling', 'biomesoplenty:umbran_sapling', 'biomesoplenty:flowering_oak_sapling',
+  'thermal:rubberwood_sapling', 'aether:skyroot_sapling', 'biomesoplenty:magic_sapling',
+  'minecraft:birch_sapling', 'minecraft:spruce_sapling', 'minecraft:oak_sapling',
+  'minecraft:flowering_azalea', 'minecraft:jungle_sapling', 'minecraft:acacia_sapling',
+  'architects_palette:twisted_sapling', 'biomesoplenty:origin_sapling', 'aether:golden_oak_sapling',
+  'biomesoplenty:mahogany_sapling', 'biomesoplenty:fir_sapling', 'biomesoplenty:snowblossom_sapling',
+  'biomesoplenty:jacaranda_sapling', 'biomesoplenty:willow_sapling', 'biomesoplenty:redwood_sapling',
+  'biomesoplenty:rainbow_birch_sapling', 'biomesoplenty:hellbark_sapling', 'biomesoplenty:palm_sapling',
+  'biomesoplenty:dead_sapling', 'biomesoplenty:red_maple_sapling', 'biomesoplenty:orange_maple_sapling',
+  'biomesoplenty:yellow_maple_sapling', 'biomesoplenty:cypress_sapling', 'biomesoplenty:pine_sapling',
+  'biomesoplenty:empyreal_sapling', 'kubejs:farmer_crop']
 randomTickMultiplier: 1
 range: 5
 requireHoe: false
