--- a/config/propertymodifier-common.toml
+++ b/config/propertymodifier-common.toml
@@ -9,38 +9,157 @@
 		#"minecraft:golden_chestplate" = 10
 		[items.armor.defense]
 			"iceandfire:dragonsteel_fire_helmet" = 5
-			"iceandfire:dragonsteel_fire_chestplate" = 12
+			"iceandfire:dragonsteel_fire_chestplate" = 10
 			"iceandfire:dragonsteel_fire_leggings" = 8
 			"iceandfire:dragonsteel_fire_boots" = 5
 			"iceandfire:dragonsteel_ice_helmet" = 5
-			"iceandfire:dragonsteel_ice_chestplate" = 12
+			"iceandfire:dragonsteel_ice_chestplate" = 10
 			"iceandfire:dragonsteel_ice_leggings" = 8
 			"iceandfire:dragonsteel_ice_boots" = 5
 			"iceandfire:dragonsteel_lightning_helmet" = 5
-			"iceandfire:dragonsteel_lightning_chestplate" = 12
+			"iceandfire:dragonsteel_lightning_chestplate" = 10
 			"iceandfire:dragonsteel_lightning_leggings" = 8
 			"iceandfire:dragonsteel_lightning_boots" = 5
+			"iceandfire:armor_red_helmet" = 3
+			"iceandfire:armor_green_helmet" = 3
+			"iceandfire:armor_bronze_helmet" = 3
+			"iceandfire:armor_gray_helmet" = 3
+			"iceandfire:armor_blue_helmet" = 3
+			"iceandfire:armor_white_helmet" = 3
+			"iceandfire:armor_sapphire_helmet" = 3
+			"iceandfire:armor_silver_helmet" = 3
+			"iceandfire:armor_electric_helmet" = 3
+			"iceandfire:armor_amythest_helmet" = 3
+			"iceandfire:armor_copper_helmet" = 3
+			"iceandfire:armor_black_helmet" = 3
+			"iceandfire:armor_red_chestplate" = 8
+			"iceandfire:armor_green_chestplate" = 8
+			"iceandfire:armor_bronze_chestplate" = 8
+			"iceandfire:armor_gray_chestplate" = 8
+			"iceandfire:armor_blue_chestplate" = 8
+			"iceandfire:armor_white_chestplate" = 8
+			"iceandfire:armor_sapphire_chestplate" = 8
+			"iceandfire:armor_silver_chestplate" = 8
+			"iceandfire:armor_electric_chestplate" = 8
+			"iceandfire:armor_amythest_chestplate" = 8
+			"iceandfire:armor_copper_chestplate" = 8
+			"iceandfire:armor_black_chestplate" = 8
+			"iceandfire:armor_red_leggings" = 6
+			"iceandfire:armor_green_leggings" = 6
+			"iceandfire:armor_bronze_leggings" = 6
+			"iceandfire:armor_gray_leggings" = 6
+			"iceandfire:armor_blue_leggings" = 6
+			"iceandfire:armor_white_leggings" = 6
+			"iceandfire:armor_sapphire_leggings" = 6
+			"iceandfire:armor_silver_leggings" = 6
+			"iceandfire:armor_electric_leggings" = 6
+			"iceandfire:armor_amythest_leggings" = 6
+			"iceandfire:armor_copper_leggings" = 6
+			"iceandfire:armor_black_leggings" = 6
+			"iceandfire:armor_red_boots" = 3
+			"iceandfire:armor_green_boots" = 3
+			"iceandfire:armor_bronze_boots" = 3
+			"iceandfire:armor_gray_boots" = 3
+			"iceandfire:armor_blue_boots" = 3
+			"iceandfire:armor_white_boots" = 3
+			"iceandfire:armor_sapphire_boots" = 3
+			"iceandfire:armor_silver_boots" = 3
+			"iceandfire:armor_electric_boots" = 3
+			"iceandfire:armor_amythest_boots" = 3
+			"iceandfire:armor_copper_boots" = 3
+			"iceandfire:armor_black_boots" = 3
+			"iceandfire:tide_blue_helmet" = 3
+			"iceandfire:tide_bronze_helmet" = 3
+			"iceandfire:tide_deepblue_helmet" = 3
+			"iceandfire:tide_green_helmet" = 3
+			"iceandfire:tide_purple_helmet" = 3
+			"iceandfire:tide_red_helmet" = 3
+			"iceandfire:tide_teal_helmet" = 3
+			"iceandfire:tide_blue_chestplate" = 8
+			"iceandfire:tide_bronze_chestplate" = 8
+			"iceandfire:tide_deepblue_chestplate" = 8
+			"iceandfire:tide_green_chestplate" = 8
+			"iceandfire:tide_purple_chestplate" = 8
+			"iceandfire:tide_red_chestplate" = 8
+			"iceandfire:tide_teal_chestplate" = 8
+			"iceandfire:tide_blue_leggings" = 6
+			"iceandfire:tide_bronze_leggings" = 6
+			"iceandfire:tide_deepblue_leggings" = 6
+			"iceandfire:tide_green_leggings" = 6
+			"iceandfire:tide_purple_leggings" = 6
+			"iceandfire:tide_red_leggings" = 6
+			"iceandfire:tide_teal_leggings" = 6
+			"iceandfire:tide_blue_boots" = 3
+			"iceandfire:tide_bronze_boots" = 3
+			"iceandfire:tide_deepblue_boots" = 3
+			"iceandfire:tide_green_boots" = 3
+			"iceandfire:tide_purple_boots" = 3
+			"iceandfire:tide_red_boots" = 3
+			"iceandfire:tide_teal_boots" = 3
+			"iceandfire:armor_silver_metal_helmet" = 2
+			"iceandfire:armor_silver_metal_chestplate" = 5
+			"iceandfire:armor_silver_metal_leggings" = 4
+			"iceandfire:armor_silver_metal_boots" = 1
 
 		#Set the knockback resistance of an armor item. May not work on modded armors, please file an issue if that's the case. Example (without the leading #):
 		#"minecraft:golden_leggings" = 0.1
 		[items.armor.knockback_resistance]
-			"iceandfire:dragonsteel_fire_helmet" = 0.2
-			"iceandfire:dragonsteel_fire_chestplate" = 0.2
-			"iceandfire:dragonsteel_fire_leggings" = 0.2
-			"iceandfire:dragonsteel_fire_boots" = 0.2
-			"iceandfire:dragonsteel_ice_helmet" = 0.2
-			"iceandfire:dragonsteel_ice_chestplate" = 0.2
-			"iceandfire:dragonsteel_ice_leggings" = 0.2
-			"iceandfire:dragonsteel_ice_boots" = 0.2
-			"iceandfire:dragonsteel_lightning_helmet" = 0.2
-			"iceandfire:dragonsteel_lightning_chestplate" = 0.2
-			"iceandfire:dragonsteel_lightning_leggings" = 0.2
-			"iceandfire:dragonsteel_lightning_boots" = 0.2
+			"iceandfire:dragonsteel_fire_helmet" = 0.1
+			"iceandfire:dragonsteel_fire_chestplate" = 0.1
+			"iceandfire:dragonsteel_fire_leggings" = 0.1
+			"iceandfire:dragonsteel_fire_boots" = 0.1
+			"iceandfire:dragonsteel_ice_helmet" = 0.1
+			"iceandfire:dragonsteel_ice_chestplate" = 0.1
+			"iceandfire:dragonsteel_ice_leggings" = 0.1
+			"iceandfire:dragonsteel_ice_boots" = 0.1
+			"iceandfire:dragonsteel_lightning_helmet" = 0.1
+			"iceandfire:dragonsteel_lightning_chestplate" = 0.1
+			"iceandfire:dragonsteel_lightning_leggings" = 0.1
+			"iceandfire:dragonsteel_lightning_boots" = 0.1
 
 		#Set the toughness value of an armor item. May not work on modded armors, please file an issue if that's the case. Example (without the leading #):
 		#"minecraft:golden_boots" = 1
 		[items.armor.toughness]
-			test = 0.0
+			"iceandfire:dragonsteel_fire_helmet" = 3
+			"iceandfire:dragonsteel_fire_chestplate" = 3
+			"iceandfire:dragonsteel_fire_leggings" = 3
+			"iceandfire:dragonsteel_fire_boots" = 3
+			"iceandfire:dragonsteel_ice_helmet" = 3
+			"iceandfire:dragonsteel_ice_chestplate" = 3
+			"iceandfire:dragonsteel_ice_leggings" = 3
+			"iceandfire:dragonsteel_ice_boots" = 3
+			"iceandfire:dragonsteel_lightning_helmet" = 3
+			"iceandfire:dragonsteel_lightning_chestplate" = 3
+			"iceandfire:dragonsteel_lightning_leggings" = 3
+			"iceandfire:dragonsteel_lightning_boots" = 3
+			"iceandfire:tide_blue_helmet" = 1.5
+			"iceandfire:tide_bronze_helmet" = 1.5
+			"iceandfire:tide_deepblue_helmet" = 1.5
+			"iceandfire:tide_green_helmet" = 1.5
+			"iceandfire:tide_purple_helmet" = 1.5
+			"iceandfire:tide_red_helmet" = 1.5
+			"iceandfire:tide_teal_helmet" = 1.5
+			"iceandfire:tide_blue_chestplate" = 1.5
+			"iceandfire:tide_bronze_chestplate" = 1.5
+			"iceandfire:tide_deepblue_chestplate" = 1.5
+			"iceandfire:tide_green_chestplate" = 1.5
+			"iceandfire:tide_purple_chestplate" = 1.5
+			"iceandfire:tide_red_chestplate" = 1.5
+			"iceandfire:tide_teal_chestplate" = 1.5
+			"iceandfire:tide_blue_leggings" = 1.5
+			"iceandfire:tide_bronze_leggings" = 1.5
+			"iceandfire:tide_deepblue_leggings" = 1.5
+			"iceandfire:tide_green_leggings" = 1.5
+			"iceandfire:tide_purple_leggings" = 1.5
+			"iceandfire:tide_red_leggings" = 1.5
+			"iceandfire:tide_teal_leggings" = 1.5
+			"iceandfire:tide_blue_boots" = 1.5
+			"iceandfire:tide_bronze_boots" = 1.5
+			"iceandfire:tide_deepblue_boots" = 1.5
+			"iceandfire:tide_green_boots" = 1.5
+			"iceandfire:tide_purple_boots" = 1.5
+			"iceandfire:tide_red_boots" = 1.5
+			"iceandfire:tide_teal_boots" = 1.5
 
 	#Set the values for tools, swords and tridents.
 	[items.tools]
@@ -63,6 +182,17 @@
 			"iceandfire:dragonsteel_lightning_pickaxe" = 7
 			"iceandfire:dragonsteel_lightning_shovel" = 7.5
 			"iceandfire:dragonsteel_lightning_hoe" = 1
+			"iceandfire:ghost_sword" = 8
+			"iceandfire:dragonbone_hoe" = 1
+			"iceandfire:dragonbone_shovel" = 5.5
+			"iceandfire:dragonbone_pickaxe" = 5
+			"iceandfire:dragonbone_axe" = 9
+			"iceandfire:dragonbone_sword" = 7
+			"iceandfire:dragonbone_sword_fire" = 7.5
+			"iceandfire:dragonbone_sword_ice" = 7.5
+			"iceandfire:dragonbone_sword_lightning" = 7.5
+			"iceandfire:silver_hoe" = 1
+			"iceandfire:silver_axe" = 9
 
 		#Set the attack speed of a tool or weapon. May not work on modded tools, please file an issue if that's the case. Example (without the leading #):
 		#"minecraft:netherite_pickaxe" = 2.5
@@ -70,6 +200,9 @@
 			"iceandfire:dragonsteel_fire_hoe" = 5
 			"iceandfire:dragonsteel_ice_hoe" = 5
 			"iceandfire:dragonsteel_lightning_hoe" = 5
+			"iceandfire:dragonbone_hoe" = 4
+			"iceandfire:silver_hoe" = 2
+			"iceandfire:silver_axe" = 0.8
 
 		#Set the efficiency value of a tool. May not work on modded tools, please file an issue if that's the case. Also doesn't work on shears, due to internal problems with that. Example (without the leading #):
 		#"minecraft:iron_pickaxe" = 16
